# deiri

./: .gitignore  Cargo.toml  README.md  build.sh
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  file_promise.rs  lib.rs  main.rs  open_file.rs  quicklook.rs  state.rs  thumb_protocol.rs
app/src-tauri/swift/: FilePromise.swift  QuickLook.swift
app/web/: api.js  index.html  main.js  style.css
mtp-core/: Cargo.toml
mtp-core/src/: device.rs  fs.rs  lib.rs  mtp.rs  path.rs  serde_u64_str.rs  transfer.rs  walk.rs
