[workspace]
resolver = "2"
members = ["mtp-core", "app/src-tauri"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
publish = false

[workspace.dependencies]
mtp-rs = "=0.15.0"
futures = "0.3"
bytes = "1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
