[package]
name = "deiri"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "deiri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "deiri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mtp-core = { path = "../../mtp-core" }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
